--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@ header {
   justify-content: space-around;
 }
 
+.logo {
+  color: white;
+}
+
 nav ul {
   display: flex;
   flex-direction: row;
@@ -34,6 +38,48 @@ nav li {
 }
 
 nav a {
+  color: white;
+}
+
+.home {
+  background-image: url(../images/banner_bg.jpg);
+  background-image: cover;
+  background-position: center;
+  width: 100%;
+  padding-bottom: 100px;
+}
+
+.intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 400px;
+  margin: auto;
+  margin-top: 100px;
+}
+.intro h1 {
+  color: white;
+}
+.intro p {
+  text-align: center;
+  color: white;
+}
+
+.lien1 {
+  background-color: white;
+  width: 90px;
+  height: 15px;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+.lien1 a {
+  font-size: 15px;
   color: black;
 }
 
