--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -5,3 +5,11 @@
     align-items: center;
     justify-content: $justify;
 }
+
+@mixin flex-col-center($justify:center)
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: $justify;
+}
