--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,4 +143,87 @@ nav ul li a {
   color: white;
 }
 
+.portfolio {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu {
+  padding-left: 400px;
+  padding-right: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+  background-color: #3dc1cd;
+}
+.menu h2 {
+  margin-top: 300px;
+  color: white;
+}
+.menu p {
+  color: white;
+  size: 250px;
+}
+.menu nav ul {
+  margin-top: 50px;
+  margin-bottom: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+}
+.menu nav ul li {
+  margin: 0;
+}
+
+.photos {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: 1000px;
+  padding-left: 50px;
+}
+.photos img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#photo1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+#photo2 {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+#photo3 {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+#photo4 {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+#photo5 {
+  grid-column: 1;
+  grid-row: 3;
+}
+
+#photo6 {
+  grid-column: 2;
+  grid-row: 3;
+}
+
 /*# sourceMappingURL=style.css.map */
