--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,12 @@
   color: #3dc1cd;
 }
 
+.white-separator {
+  width: 250px;
+  height: 1px;
+  background-color: white;
+}
+
 header {
   padding: 10px;
   display: flex;
@@ -123,12 +129,6 @@ nav ul li a {
   left: 15px;
 }
 
-.white-separator {
-  width: 250px;
-  height: 1px;
-  background-color: white;
-}
-
 .link1 {
   display: flex;
   flex-direction: column;
@@ -147,11 +147,11 @@ nav ul li a {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .menu {
-  padding-left: 400px;
+  padding-left: 200px;
   padding-right: 150px;
   display: flex;
   flex-direction: column;
@@ -167,7 +167,7 @@ nav ul li a {
 }
 .menu p {
   color: white;
-  size: 250px;
+  width: 250px;
 }
 .menu nav ul {
   margin-top: 50px;
@@ -182,12 +182,15 @@ nav ul li a {
 .menu nav ul li {
   margin: 0;
 }
+.menu nav ul li:first-child a {
+  color: #F6C45C;
+}
 
 .photos {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  width: 1000px;
+  width: 700px;
   padding-left: 50px;
 }
 .photos img {
@@ -224,6 +227,57 @@ nav ul li a {
 #photo6 {
   grid-column: 2;
   grid-row: 3;
+}
+
+.testimonies {
+  background-color: #F6C45C;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 100px 0px 100px 0px;
+}
+
+.quotation {
+  width: 600px;
+  background-color: white;
+  border-radius: 5px;
+  color: rgb(118, 118, 118);
+  text-align: center;
+  font-style: italic;
+  padding: 15px 10px 15px 10px;
+}
+
+.author {
+  margin-top: 20px;
+  color: white;
+  font-weight: 900;
+  font-size: larger;
+}
+
+.role {
+  margin-top: 5px;
+  color: white;
+}
+
+.selectors {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.bullet {
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background-color: rgb(255, 255, 255);
+}
+
+.bullet:last-child {
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 /*# sourceMappingURL=style.css.map */
